# Polaris

./: .env.example  .gitignore  AGENTS.md  CODING_STANDARDS.md  CONTEXT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  skills-lock.json
.agents/plans/: plan_alpaca_portfolio_data_update.md  plan_background_rag_ingestion_worker.md  plan_breadth_adoption_phase2.md  plan_canonical_curated_record_projection+.md  plan_canonical_curated_record_projection.md  plan_completed_run_context_persistence.md  plan_completed_run_migration_to_postgres.md  plan_core_database_model_update.md  plan_database_migration_testing.md  plan_deepeval_llm_evaluation_integration.md  plan_full_core_telemetry_integration.md  plan_full_core_telemetry_integration_v2.md  plan_get_sp500_data_refactor.md  plan_golden_dataset_implementation.md  plan_incremental_rag_ingestion.md  plan_instructor_dspy_integration.md  plan_langfuse_observability_integration.md  plan_litellm_gateway_integration.md  plan_mcp_server_catalog_v1.md  plan_morning_report_output_into_financial_report.md  plan_observability_boundary_hardening.md  plan_platform_backtesting_system.md  plan_platform_rag_pipeline_master.md  plan_platform_rag_pipeline_v2.md  plan_platform_refactor_stabilization.md  plan_post_rag_v2_stabilization.md  plan_postgres_persistence.md  plan_postgres_persistence_v2.md  plan_postgres_persistence_v3.md  plan_rag_model_configuration.md  plan_refactor_application_telemetry.md  plan_searxng_crawl4ai_replacement.md  plan_staged_semantic_chunking_implementation.md  plan_strategy_structured_hypothesis_implementation+.md  plan_strategy_structured_hypothesis_implementation.md  plan_strategy_synthesis_correctness.md  plan_total_test_code_coverage.md  plan_update_cli_output_add_new_formats.md  plan_workflow_control_plus_notifications.md  spec-review-readiness-34.md
.agents/research/: local_model_capabilities_constraints_issue_4.md  model_alias_qwen35_usage_issue_5.md
application/: di.py
application/ai_optimization/: __init__.py  ai_optimization_service.py  contracts.py  runtime_artifacts.py
application/evaluations/: __init__.py  contracts.py  di.py  evaluation_case_builder.py  evaluation_dataset_service.py  evaluation_datasets.py  evaluation_jobs.py  evaluation_langfuse_projection_service.py  evaluation_result_service.py  evaluation_run_service.py  evaluation_telemetry.py  model_replacement_gate.py  rag_evaluation_metrics.py  risk_authority_gate.py
application/governance/: __init__.py  authority_metadata_governance.py
application/health/: __init__.py  platform_readiness.py
application/observability/: __init__.py  ai_evaluation_datasets.py  ai_observability_contracts.py  ai_observability_export_service.py  ai_observability_operational_status.py  ai_observability_security.py  ai_prompt_management.py  di.py  (+3 more)
config/: di.py  provider_profiles.py  rag_model_config.py  settings.py  strategy_model_config.py
core/: di.py
docs/: ai_prompt_optimization.md  ai_structured_outputs.md  backtesting_system.md  canonical_trace_lifecycle.md  core_telemetry_observability.md  langfuse_ai_observability.md  litellm_gateway.md  llm_evaluation.md  llm_guard_integration_analysis.md  model_allocation_readiness.md  model_profile_policy.md  observability_coverage_ledger.md  platform_architecture_and_operations.md  platform_architecture_ownership_ledger.md  platform_data_contract_inventory.md  platform_future_architecture.md  platform_mcp_server.md  platform_rag_pipeline.md  postgres_persistence.md  strategy_advisory_architecture_analysis.md  testing_guide.md  workflow_output_curation.md
integration/: di.py
intelligence/: di.py
mcp_server/: __init__.py  auth.py  lifespan.py  request_scope.py  server.py  settings.py  telemetry.py
migrations/: README.md  env.py
scripts/: initialize_database.py  read_only_user.sql  run_baseline_evaluation_gate.py
workflows/: catalog.py
(+1238 files in other folders)
